added title and heading_2 tags

--- a/a.html
+++ b/a.html
@@ -2,10 +2,15 @@
 
 <head>
 
-</head>
+  <title> DevOps Tools </title>
+
+  </head>
 
 <body>
-
+  
+  <h2> Git </h2>
+  <h2> kubernetes </h2>
+  
 </body>
 
 </html>
