Added CSS style tags

--- a/a.html
+++ b/a.html
@@ -4,6 +4,12 @@
   
   <!-- Please use CSS style tags here -->
 
+  <style>
+
+  h2 {color:#800080;font-size:300%}
+
+  </style>
+
   <title> DevOps Tools </title>
 
   </head>
