h4 color changed to green and paragraph added

--- a/a.html
+++ b/a.html
@@ -8,7 +8,8 @@
 
   h2 {color:#800080;font-size:300%}
   h3 {color:#FFA500;font-size:200%}
-  h4 {color:#0000FF;font-size:100%}
+  h4 {color:#008000;font-size:100%}
+  p {color:#FF1493}
 
 
   </style>
@@ -20,8 +21,11 @@
 <body>
   
   <h2> Git </h2>
+  <p> This is Version Control System tool </p>
   <h2> kubernetes </h2>
+  <p> This is a tool for automating deployment, scaling, and management of containerized applications </p>
   <h2> Puppet </h2>
+  <p> This is a tool for centralizing and automating configuration management. </p>
   
 </body>
 
