h2 color changed to dark brown and paragraph added

--- a/a.html
+++ b/a.html
@@ -7,7 +7,7 @@
   <style>
 
   h2 {color:#800080;font-size:300%}
-  h3 {color:#FFA500;font-size:200%}
+  h3 {color:#5C4033;font-size:200%}
   h4 {color:#008000;font-size:100%}
   p {color:#FF1493}
 
@@ -26,7 +26,9 @@
   <p> This is a tool for automating deployment, scaling, and management of containerized applications </p>
   <h2> Puppet </h2>
   <p> This is a tool for centralizing and automating configuration management. </p>
-  
+  <h2> Ansible </h2>
+  <p> This is a tool for used for IT tasks such as configuration management, application deployment, intraservice orchestration, and provisioning. </p>  
+
 </body>
 
 </html>
